# VEX_Push_Back

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  out.txt  pyrightconfig.json  rust-toolchain.toml  treefmt.nix
.cargo/: config.toml
.zed/: settings.json
bots/black/: Cargo.toml
bots/black/src/: autons.rs  compete.rs  control.rs  main.rs  path.jerryio.txt  robot.rs
bots/blackui/: Cargo.toml
bots/blackui/src/: compete.rs  control.rs  main.rs  robot.rs
bots/controltesting/: Cargo.toml
bots/controltesting/src/: compete.rs  robot.rs
bots/one/: Cargo.toml
bots/one/src/: autons.rs  compete.rs  main.rs  robot.rs
bots/replay/: Cargo.toml
bots/replay/src/: main.rs
bots/serialtesting/: Cargo.toml
bots/serialtesting/src/: main.rs
bots/testing/: Cargo.toml
bots/testing/src/: main.rs
bots/uitesting/: Cargo.toml
bots/uitesting/src/: control.rs
bots/v1/: Cargo.toml
bots/v1/src/: autons.rs  compete.rs  lib.rs  robot.rs
bots/white/: Cargo.toml
bots/white/src/: autons.rs  compete.rs  control.rs  main.rs  robot.rs
common/slintui/: Cargo.toml  build.rs
common/slintui/src/: autons.rs  lib.rs  plotting.rs  ui.rs
common/slintui/ui/: app.slint
common/slintui/ui/pages/: odometry.slint
common/subsystems/: Cargo.toml
common/subsystems/src/: drivetrain.rs  intake.rs  lib.rs  pnemuatics.rs  trunk.rs
common/subsystems/src/copro/: mod.rs  tracking.rs
common/subsystems/src/replay/: mod.rs  structs.rs
coprocessor/: README.md  copro.py  test.py
coprocessor/brain/: Cargo.toml  build.rs
coprocessor/brain/src/: lib.rs  structs.rs  testing.rs  units.rs  vexide.rs
coprocessor/brain/src/requests/: calibrate.rs  get_position.rs  get_stddev.rs  get_velocity.rs  mod.rs  ping.rs  set_led.rs  set_leds.rs  set_offsets.rs  set_position.rs  set_scalars.rs
coprocessor/esp32 testing/: cobs.py  main.py  otos.py  pymakr.conf
coprocessor/nixos/: default.nix
coprocessor/nixos/config/: default.nix  filesystems.nix  gadget.nix  hardware.nix  networking.nix  nix.nix  packages.nix  raspberry.nix  users.nix
coprocessor/nixos/config/otos/: default.nix
coprocessor/pico/: blinker.py  main.py  otos.py  ws2812b.py
coprocessor/pico/pio/: blinker.pio  blinker.py  ws2812b.pio  ws2812b.py
coprocessor/pico/src/: blinker.py  cobs.py  consts.py  main.py  otos.py  ws2812b.py
coprocessor/pico/src/pio/: blinker.pio  ws2812b.py
crates/display/: Cargo.toml
crates/display-simulator/: Cargo.toml  config.toml
crates/display-simulator/src/: main.rs
crates/display/src/: vexide.rs
crates/evian-extra/src/motion/: boomerang.rs  mod.rs
crates/minios/: Cargo.toml
crates/minios/src/: main.rs
crates/push-back/: Cargo.toml
crates/push-back/src/: autons.rs  lib.rs
crates/push-back/src/subsystems/: drivetrain.rs  intake.rs  mod.rs  trunk.rs
crates/push-back/src/subsystems/copro/: mod.rs  tracking.rs
crates/push-back/src/subsystems/replay/: mod.rs  structs.rs
crates/slintui/: Cargo.toml  build.rs
crates/slintui/src/: plotting.rs  ui.rs
crates/slintui/ui/: app.slint
crates/slintui/ui/pages/: autons.slint  odometry.slint
display/: Cargo.toml
display/simulator/: Cargo.toml
display/simulator/src/: main.rs
display/src/: autons.rs  lib.rs  vexide.rs
docs/: MCL.md  README.md
minios/: Cargo.toml
minios/src/: main.rs
misc/commands/: Cargo.toml
misc/commands/src/: command.rs  lib.rs  subsystem.rs
misc/evian-extra/: Cargo.toml
misc/evian-extra/src/: lib.rs
misc/evian-extra/src/control/: ltv_unicycle.rs  mod.rs
misc/evian-extra/src/math/: mod.rs
misc/evian-extra/src/motion/: boomerang.rs  ltv_unicycle.rs
misc/evian-extra/src/utils/: pid_tuning.rs
misc/minios/src/: main.rs
misc/vex-mcl/: Cargo.toml
misc/vex-mcl/src/: lib.rs
misc/vexide-rand/: Cargo.toml
misc/vexide-rand/src/: lib.rs
misc/vexide-telemetry/: Cargo.toml
misc/vexide-telemetry/src/: lib.rs  log.rs
pcb/: _autosave-pcb.kicad_prl  _autosave-pcb.kicad_pro  fp-info-cache  pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_Paste.gbr  pcb-B_Silkscreen.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_Paste.gbr  pcb-F_Silkscreen.gbr  pcb-NPTH.drl  pcb-PTH.drl  pcb-job.gbrjob  pcb.kicad_pcb  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  pcb.kicad_sch-bak  pcb2.kicad_prl  pcb2.kicad_pro  pcb_though_hole.kicad_pro  ~pcb.kicad_pcb.lck
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pi/: README.md
pi/nixos/: default.nix
pi/nixos/config/: hardware.nix  networking.nix  nix.nix
pi/nixos/config/otos/: default.nix
src/: autons.rs  compete.rs  display.rs  main.rs  otos.rs  robot.rs  tracking.rs
