[workspace]
resolver = "3"
members = ["bots/*", "common/*", "coprocessor/brain", "misc/*"]
exclude = []

[workspace.dependencies]
vexide = { version = "0.8.0", features = ["full", "vex-sdk-jumptable", "vex-sdk-mock"] }
vexide-motorgroup = { version = "2.2.0" }
shrewnit = { git = "https://github.com/Gavin-Niederman/shrewnit.git", rev = "73617f18d1faf79ffed097d1fc7ef0e1ae8663de" }
evian = { git = "https://github.com/vexide/evian", rev = "bc300becbbbc8612de4a0d559fc66159040cd841" }
bytes = { version = "1.11.1", default-features = false }
triple_buffer = "8.1.1"
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
cobs = { version = "0.5.0", default-features = false, features = ["alloc"] }
ciborium = "0.2.2"
bitflags = { version = "2.10.0" }
serde = { version = "1.0.228", features = ["derive"] }
autons = { version = "0.2.0", default-features = false, features = ["compete", "simple"] }
