[package]
name = "bot-black"
version = "0.1.0"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "pizza"
compress = true

[dependencies]
vexide = { workspace = true }
evian = { workspace = true }
shrewnit = { workspace = true }
push-back = { path = "../../crates/push-back" }
coprocessor = { path = "../../coprocessor/brain" }
# display = { path = "./display" }
