[package]
name = "bot-controltesting"
version = "0.1.0"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 5
icon = "pizza"
compress = true

[dependencies]
vexide = { workspace = true }
evian = { workspace = true }
shrewnit = { workspace = true }
push-back = { path = "../../crates/push-back" }
coprocessor = { path = "../../coprocessor/brain" }
evian-extra = { path = "../../crates/evian-extra" }
# display = { path = "./display" }
