[package]
name = "bot-replaytesting"
version = "0.1.0"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 6
icon = "cool-x"
compress = true

[dependencies]
vexide = { workspace = true }
evian = { workspace = true }
shrewnit = { workspace = true }
cobs = { workspace = true }
ciborium = { workspace = true }
push-back = { path = "../../crates/push-back" }
vex-sdk = "0.28.0"
# display = { path = "./display" }
