[package]
name = "bot-serialtesting"
version = "0.1.0"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 7
icon = "cool-x"
compress = true

[dependencies]
cobs = { workspace = true }
vexide = { workspace = true }
evian = { workspace = true }
shrewnit = { workspace = true }
push-back = { path = "../../crates/push-back" }
coprocessor = { path = "../../coprocessor/brain" }
vex-sdk = "0.28.0"
# display = { path = "./display" }
