[package]
name = "slintui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
plotters = { version = "0.3.7", default-features = false, features = ["line_series", "bitmap_backend", "ab_glyph"] }
slint = { version = "=1.14.1", default-features = false, features = [
  "compat-1-2",
  "libm",
  "renderer-software",
  "image-default-formats"
  # "std"
] }
vexide = { workspace = true }
vexide-slint = { git = "https://github.com/vexide/vexide-slint" }
# display = { path = "./display" }

[build-dependencies]
slint-build = { version = "=1.14.1", features = ["sdf-fonts"] }
