[package]
name = "coprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
cobs = { version = "0.4.0", default-features = false, features = ["alloc"] }
nom = { workspace = true }
shrewnit = { workspace = true }
vexide = { workspace = true }
triple_buffer = { workspace = true }
