[package]
name = "coprocessor"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
cobs = { workspace = true }
nom = { workspace = true }
shrewnit = { workspace = true }
vexide = { workspace = true }
futures-util = { workspace = true }

[build-dependencies]
sha2 = "0.10.9"
base16ct = { version = "1.0.0", features = ["alloc"] }

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "pizza"
compress = true

[[bin]]
name = "coprocessor-testing"
path = "src/testing.rs"
