[package]
name = "display-simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
display = { path = "../display", default-features = false, features = ["std"] }
embedded-graphics-core = "0.4.0"
embedded-graphics-simulator = { git = "https://github.com/TymanWasTaken/simulator.git", rev = "dd42c628144acec0ac49e0c492ece7223569f318" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[workspace]
