[package]
name = "push-back"
version = "0.1.0"
edition = "2024"

[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
evian = { workspace = true }
shrewnit = { workspace = true }
vexide = { workspace = true }
coprocessor = { path = "../../coprocessor/brain" }
bitflags = { version = "2.10.0", features = ["bytemuck"] }
bytemuck = { workspace = true }
ciborium = "0.2.2"
serde = { version = "1.0.228", features = ["derive"] }
# display = { path = "./display" }
