[package]
name = "push-back"
version = "0.1.0"
edition = "2024"

[dependencies]
evian = { workspace = true }
shrewnit = { workspace = true }
vexide = { workspace = true }
coprocessor = { path = "../../coprocessor/brain" }
bitflags = { version = "2.10.0", features = ["bytemuck"] }
bytemuck = { workspace = true }
ciborium = { workspace = true }
cobs = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
# display = { path = "./display" }
